src/main/java/com/example/DiplomaSite/error/DiplomaAssignmentDeletionException.java
package com.example.DiplomaSite.error;

public class DiplomaAssignmentDeletionException extends RuntimeException{
    public DiplomaAssignmentDeletionException(String message, Throwable cause) {
        super(message, cause);
    }
}
